--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dependencies = [
   "torch>=2.8.0",
   "numpy>=2.2.5",
+  "tqdm>=4.66.0",
 ]
 
 [tool.setuptools.packages.find]
